@@ -798,6 +798,8 @@ Library
 Extension Modules
 -----------------
 
+- collections.defaultdict now has a repr() function that can be run through eval()
+
 - Patch #1388440: Add set_completion_display_matches_hook and
   get_completion_type to readline.
 
